fix: :bug: style bug: set hard code height for cast member img
previous min-height setting for cast img is different in safari, safari stretched the img exceeding min height, chrome didnt

--- a/src/pages/MediaDetailsPage/MediaDetailsPage.scss
+++ b/src/pages/MediaDetailsPage/MediaDetailsPage.scss
@@ -126,7 +126,8 @@
       background-color: rgb(25 33 52);
       border-radius: 10px;
       img {
-        min-height: 162px; // if no image placeholder content card spacing fix
+        // min-height: 162px; // if no image placeholder - content card spacing fix
+        height: 162px; // safari img is stretched with min-height - set hard code height to fix?
       }
       .names-container {
         padding: 0.7rem;
